alteração de estruturas da tabela produtos
